<resources>
    <string name="app_name">TiendaVirtual</string>
    <string name="name">Nombre</string>
    <string name="msg_name">Digite el nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="msg_descripcion">Digite la descripción</string>
    <string name="urlimagen">URL Imágen</string>
    <string name="msg_precio">Digite el Precio</string>
    <string name="msg_url">Digite el URL de la imagen</string>
    <string name="btn_text">Ingresar</string>
    <string name="computador_asus">Computador ASUS</string>
    <string name="_13_000_000_00">$ 13.000.000,00</string>
    <string name="agregar">Agregar</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="agregar_categor_a">Agregar Categoría</string>
    <string name="agregar_categoria">Agregar Categoría</string>
</resources>